scripts/kubernetes/manifests/others/beaver-triple-service/beaver-triple-service-envoy-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.service.external-traffic-policy: local
    kompose.service.nodeport.port: "31020"
    kompose.service.type: nodeport
  creationTimestamp:
  labels:
    io.kompose.service: beaver-triple-service-envoy
  name: beaver-triple-service-envoy
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: beaver-triple-service-envoy
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.service.external-traffic-policy: local
        kompose.service.nodeport.port: "31020"
        kompose.service.type: nodeport
      creationTimestamp:
      labels:
        io.kompose.network/beaver-triple-service-default: "true"
        io.kompose.service: beaver-triple-service-envoy
    spec:
      containers:
      - args:
        - /bin/sh
        - -c
        - /usr/local/bin/envoy -c /etc/envoy/envoy.yaml
        image: envoyproxy/envoy:v1.17.1
        name: beaver-triple-service-envoy
        ports:
        - containerPort: 51020
          hostIP: 0.0.0.0
        resources: {}
        tty: true
        volumeMounts:
        - mountPath: /etc/envoy/envoy.yaml
          name: beaver-triple-service-envoy-hostpath0
      restartPolicy: Always
      volumes:
      - hostPath:
          path: /opt/QuickMPC/config/beaver-triple-service/envoy.yaml
        name: beaver-triple-service-envoy-hostpath0
status: {}
