scripts/kubernetes/manifests/others/beaver-triple-service/beaver-triple-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp:
  labels:
    io.kompose.service: beaver-triple-service
  name: beaver-triple-service
spec:
  ports:
  - name: "50020"
    port: 50020
    targetPort: 50020
  selector:
    io.kompose.service: beaver-triple-service
status:
  loadBalancer: {}
